namespaces/live.cloud-platform.service.justice.gov.uk/cccd-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cccd-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/application: "cccd"
    cloud-platform.justice.gov.uk/owner: "laa-get-paid: crowncourtdefence@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/Claim-for-Crown-Court-Defence"
    cloud-platform.justice.gov.uk/slack-channel: "cccd_development"
